fix: harden public showcase links, certificate example, and mcp source-of-truth

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dreams | MirageKit</title>
-    <meta name="description" content="MirageKit: context compression demos, tropical-compactor MCP, and reproducible memory-safety artifacts." />
+    <meta name="description" content="MirageKit: context compression demos, tropical-mcp, and reproducible memory-safety artifacts." />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
@@ -18,9 +18,9 @@
         contract-guarded tropical compaction and inspect memory safety certificates.
       </p>
       <div class="hero-links">
-        <a href="../results/VALIDATION_SUMMARY.md">Validation Summary</a>
-        <a href="../papers/README.md">Papers</a>
-        <a href="../mcp/tropical-compactor/README.md">MCP Implementation</a>
+        <a href="https://github.com/jack-chaudier/dreams/blob/main/results/VALIDATION_SUMMARY.md">Validation Summary</a>
+        <a href="https://github.com/jack-chaudier/dreams/tree/main/papers">Papers</a>
+        <a href="https://github.com/jack-chaudier/tropical-mcp">MCP Implementation</a>
       </div>
     </header>
 
@@ -56,6 +56,7 @@
           </article>
         </div>
 
+        <p id="mirageBadge" class="badge hidden">VALIDITY MIRAGE DETECTED</p>
         <p id="deltaText" class="delta"></p>
       </section>
 
