--- a/site/index.html
+++ b/site/index.html
@@ -7,24 +7,12 @@
     <meta name="description" content="Your context compression looks valid. It isn't. Interactive demo of the validity mirage in LLM context management." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&family=JetBrains+Mono:wght@400;500&family=Source+Serif+4:opsz,wght@8..60,400;8..60,600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="grain" aria-hidden="true"></div>
-    <div class="fireflies" aria-hidden="true">
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-      <div class="firefly"></div>
-    </div>
-
     <header class="hero">
       <div class="hero-brand stagger" style="--i:0">
-        <span class="sigil">&#9672;</span>
         <span class="brand-label">Mirage Research Program</span>
       </div>
       <h1 class="hero-title stagger" style="--i:1">MirageKit</h1>
