Polish semantic regret threshold and slider accessibility

--- a/site/index.html
+++ b/site/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="slider-track-wrap">
             <div class="slider-danger-zone"></div>
-            <input id="retentionSlider" type="range" min="20" max="100" value="100" step="1" />
+            <input id="retentionSlider" type="range" min="20" max="100" value="100" step="1" aria-label="Retention budget percentage" />
           </div>
           <div class="slider-ticks">
             <span>20%</span>
@@ -47,7 +47,7 @@
           </div>
           <div class="semantic-regret-row hidden" id="semanticRegret">
             <span class="sr-label">Semantic Regret</span>
-            <span class="sr-value mono" id="semanticRegretValue">&mdash;</span>
+            <span class="sr-value mono" id="semanticRegretValue" aria-live="polite">&mdash;</span>
           </div>
         </div>
 
