Polish public showcase, draft labeling, and integrity CI

--- a/site/index.html
+++ b/site/index.html
@@ -24,10 +24,11 @@
         <a class="hero-link" href="https://github.com/jack-chaudier/dreams/tree/main/papers" target="_blank" rel="noopener">Papers <span class="link-arrow">&nearr;</span></a>
         <a class="hero-link" href="https://github.com/jack-chaudier/tropical-mcp" target="_blank" rel="noopener">MCP Implementation <span class="link-arrow">&nearr;</span></a>
       </div>
+      <p class="research-status stagger" style="--i:6">Working Papers (First Draft, 2026) &middot; Public showcase repo; full research monorepo remains private.</p>
     </header>
 
     <main>
-      <section class="interactive-panel stagger" style="--i:6" id="interactive">
+      <section class="interactive-panel stagger" style="--i:7" id="interactive">
         <span class="figure-label">Figure 1 — Interactive Retention Explorer</span>
         <div class="slider-area">
           <div class="slider-header">
@@ -184,6 +185,19 @@
           </div>
         </div>
       </section>
+
+      <section class="credibility-note reveal" aria-label="Evidence boundaries">
+        <h3>Evidence Boundaries</h3>
+        <p>
+          Current evidence combines synthetic stress fixtures with focused real-incident validation.
+          The strongest claim in this demo is structural: naive recency can preserve answerability while losing pivot integrity.
+        </p>
+        <ul>
+          <li>Replay cards are derived from committed artifacts in <code>results/replay/</code>.</li>
+          <li>Real-incident validation is intentionally labeled as limited-scale in source drafts.</li>
+          <li>Use this site as a transparent research snapshot, not a universal benchmark leaderboard.</li>
+        </ul>
+      </section>
     </main>
 
     <footer class="site-footer reveal">
@@ -196,16 +210,16 @@
       </div>
       <div class="paper-badges">
         <a class="paper-badge" href="/papers/paper_01_absorbing_states_in_greedy_search.pdf" target="_blank" rel="noopener">
-          <span class="badge-num">01</span> Absorbing States <span class="badge-arrow">&nearr;</span>
+          <span class="badge-num">01</span> Absorbing States (Draft) <span class="badge-arrow">&nearr;</span>
         </a>
         <a class="paper-badge" href="/papers/paper_02_streaming_oscillation_traps.pdf" target="_blank" rel="noopener">
-          <span class="badge-num">02</span> Streaming Traps <span class="badge-arrow">&nearr;</span>
+          <span class="badge-num">02</span> Streaming Traps (Draft) <span class="badge-arrow">&nearr;</span>
         </a>
         <a class="paper-badge" href="/papers/paper_03_validity_mirage_compression.pdf" target="_blank" rel="noopener">
-          <span class="badge-num">03</span> Validity Mirage <span class="badge-arrow">&nearr;</span>
+          <span class="badge-num">03</span> Validity Mirage (Draft) <span class="badge-arrow">&nearr;</span>
         </a>
         <a class="paper-badge" href="/papers/paper_i_tropical_algebra.pdf" target="_blank" rel="noopener">
-          <span class="badge-num">I</span> Tropical Algebra <span class="badge-arrow">&nearr;</span>
+          <span class="badge-num">I</span> Tropical Algebra (Draft) <span class="badge-arrow">&nearr;</span>
         </a>
       </div>
     </footer>
