Add Zenodo DOI links across README, site footer, and outreach template

--- a/site/index.html
+++ b/site/index.html
@@ -259,7 +259,10 @@
 
     <footer class="site-footer reveal">
       <p class="footer-quote"><em>The roots remember what the canopy forgets.</em></p>
-      <p class="footer-credit">Jack Chaudier Gaffney &middot; University of Michigan &middot; 2026</p>
+      <p class="footer-credit">
+        Jack Chaudier Gaffney &middot; University of Michigan &middot; 2026 &middot;
+        <a class="footer-doi" href="https://doi.org/10.5281/zenodo.18793829" target="_blank" rel="noopener">DOI: 10.5281/zenodo.18793829</a>
+      </p>
       <div class="footer-links">
         <a class="footer-link" href="https://github.com/jack-chaudier/dreams" target="_blank" rel="noopener">Repo</a>
         <a class="footer-link" href="https://github.com/jack-chaudier/dreams/tree/main/papers" target="_blank" rel="noopener">Papers</a>
